--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-router-dom": "^7.9.4",
+    "react-syntax-highlighter": "^16.1.0",
     "tailwindcss": "^4.1.16"
   },
   "devDependencies": {
